<resources>
    <string name="app_name">Challenge1</string>
    <string name="animal_image_description">Animal</string>
    <string name="animal">Animal: </string>
    <string name="age">Age: </string>
    <string name="owner">Owner: </string>
    <string name="button_edit">Edit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>