<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragment1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="348dp"
            android:layout_height="50dp" />

        <ImageView
            android:id="@+id/animalView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/animal_image_description" />


        <TextView
            android:id="@+id/animalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/animal"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/animalAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/age"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/animalOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/owner"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>