<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Fragment2">


    <TextView
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="Edit"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="50dp" />

    <TextView
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="monospace"
        android:text="Name"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edit_name_field"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/animal"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textAlignment="textStart"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/owner_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="monospace"
        android:text="Owner"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edit_owner_field"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/owner"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textAlignment="textStart"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/age_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="monospace"
        android:text="Age"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="20dp" />


    <EditText
        android:id="@+id/edit_age_field"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/age"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textAlignment="textStart"
        android:textSize="20sp" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Save" />

</LinearLayout>